Fix header alignment
Added left margin to ensure alignment of the header with elements below

--- a/style.css
+++ b/style.css
@@ -33,8 +33,9 @@ li {
 
 .header {
     margin-bottom: 40px;
+    margin-left: 2px;
     padding-left: 10px;
-    border-left: 5px solid #000000;
+    border-left: 4px solid #000000;
 }
 
 .link-no-underline {
